# image-scraper-mcp

./: .dockerignore  Dockerfile  MCP_SETUP.md  README.md  debug_ddg.py  debug_scraper.py  docker-compose.yml  image_scraper.py  image_scraper_maps.py  image_scraper_mcp_server.py  image_scraper_selenium.py  live_page_source.html  mcp_config_example.json  page_source.html  pyproject.toml  run_mcp_docker.sh
tests/: test_image_scraper_ddg.py  test_image_scraper_maps.py
